# RecHub

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
metadata/: jd-multi.json  jd.json  pinterest.json
rechub/: parameters.py  test.py  train.py
rechub/model/: ncf.py
rechub/model/general/predictor/: __init__.py  wdot.py
rechub/model/heterogeneous/: network.py
rechub/model/heterogeneous/aggregator/: __init__.py  base.py  catgcn.py  gat.py
rechub/model/heterogeneous/aggregator/lightgcn/: __init__.py  lightgcn.py
rechub/model/heterogeneous/aggregator/ngcf/: ngcf.py  ngcf_conv.py
rechub/utils/: metrics.py  other.py
src/: loss.py  parameters.py  sampler.py  test.py  train.py  utils.py
src/model/: DSSM.py  DeepFM.py  GAT.py  GCN.py  HET.py  NCF.py  NGCF.py  __init__.py  dssm.py  ncf.py
src/model/HN/: __init__.py
src/model/HN/aggregator/: GAT.py
src/model/NGCF/: NGCFConv.py  __init__.py
src/model/general/: additive_attention.py
src/model/general/attention/: __init__.py  additive.py
src/model/general/predictor/: Wdot.py  dnn.py  dot.py
src/model/heterogeneous/: __init__.py  network.py
src/model/heterogeneous/aggregator/: base.py  gat.py  gcn.py
src/model/heterogeneous/aggregator/ngcf/: __init__.py  ngcf.py  ngcf_conv.py
src/rechub/: export.py  parameters.py  test.py  train.py
src/rechub/model/: deepfm.py
src/rechub/utils/: other.py
src/utils/: __init__.py  early_stop.py  metrics.py  other.py
tests/: test_parameters.py
tests/model/: test_ncf.py
tests/model/heterogeneous/aggregator/: test_gcn.py
(+5 files in other folders)
