[metadata]
name = rechub
version = 0.0.4
author = yusanshi
author_email = meet.leiyu@gmail.com
description = A package with implementations of some methods in recommendation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yusanshi/RecHub
project_urls =
    Bug Tracker = https://github.com/yusanshi/RecHub/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    torch
    dgl
    pandas
    numpy
    scikit-learn
    tensorboard
    enlighten
    coloredlogs

[options.packages.find]
where = src